# elspeth

./: .coverage  .dockerignore  .gitignore  .gitleaks.toml  .mcp.json  .mutmut-cache  .pre-commit-config.yaml  .pylintrc  404.html  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT_2025-10-26.md  ARCHITECTURE_CONSOLIDATION_PROPOSAL.md  CHANGELOG-RC1.md  CHANGELOG-RC2.md  CHANGELOG.md  CHECKPOINT_BUGS_CONSENSUS.md  CHECKPOINT_RESUME_BUG_REPORT.md  CLAUDE.md  CONTRIBUTING.md  CORE_ARCHITECTURE_ANALYSIS.md  DUPLICATION_ANALYSIS.md  DUPLICATION_REMOVAL_SUMMARY.md  Dockerfile  EXECUTION_PLAN_runner_refactor.md  FEATURE_COMPARISON.md  LICENSE  LINT_BURNDOWN.md  MARKDOWN_CLEANUP_REPORT.md  Makefile  PLUGIN.md  PLUGIN_SPLIT_IMPLEMENTATION_PLAN.md  README.md  REFACTORING_COMPLETE_suite_runner.md  REMEDIATION_COMPLETE.md  REQUIREMENTS.md  SECURITY.md  TEST_SYSTEM.md  USER_MANUAL.md  add_determinism_level.py  (+41 more)
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/export-state/: 2a0281f26f88500d.json  70237b69e32fae02.json  77a08c34121b2cfa.json
.claude/: settings.json
.claude/agents/: artifact-pipeline-visualizer.md  config-merge-debugger.md  docs-sync.md  middleware-chain-debugger.md  plugin-scaffolder.md  registry-schema-validator.md  security-context-tracer.md  test-coverage-enforcer.md
.claude/prompts/: p2-migration-instructions.md  p3-migration-instructions.md  p4-migration-instructions.md
.codex/: config.toml
.github/: README.md  actions_latest.txt  actions_latest_strict.txt  base-image.txt  copilot-instructions.md  dependabot.yml
.github/workflows/: auto-bump-grype.yml  auto-bump-semgrep.yml  build-push.yaml  (+29 more)
.pre-commit-cache/: patch1770707247-3325942
ADR002_IMPLEMENTATION/: CERTIFICATION_EVIDENCE.md  PROGRESS.md  README.md  THREAT_MODEL.md
alembic/: env.py
api-reference/: index.html
config/: blob_store.yaml  blob_store.yaml.template  settings.yaml  settings_colour_animals.yaml  settings_prompt_variants.yaml  smoke-test.yaml
dmp/: cli.py  config.py
dmp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: README.md  elspeth-sudoers  entrypoint.sh  sidecar.toml.example  supervisord.conf
docs/: 06-technical-debt-catalog.md  ATO_INDEX.md  ATO_PROGRESS.md  ATO_QUICK_START.md  ATO_REMEDIATION_WORK_PROGRAM.md  ATO_SUMMARY.md  AUSTRALIAN_GOVERNMENT_CONTROLS.md  CODEX_LOG.md  COMPLIANCE_ROADMAP.md  DOCUMENTATION_AUDIT_2025-10-12.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SHOULD_FIX_EXECUTION_PLAN.md  SHOULD_FIX_SUMMARY.md  TEST_SYSTEM.md  TRACEABILITY_MATRIX.md  USER_MANUAL.md  bugs.md  end_to_end_scenarios.md  examples_colour_animals.md  fuzzing.md  logging-standards.md  migration-guide.md  release-checklist.md  reporting-and-suite-management.md  test-remediation-plan.md  test-suite-v2-design.md
examples/: AGENTS.md  README.md
inputs/: .gitignore  README.md
logs/: run_20251014T185506Z.jsonl  run_20251014T220452Z.jsonl  run_20251014T220804Z.jsonl  run_20251014T221020Z.jsonl
notes/: 2024-05-Initial-Assessment.md  2025-05-status.md  adr-plugin-security-context.md  azure-middleware.md  azure-telemetry-plan.md  composer-llm-eval-2026-04-28.md  composer-llm-eval-prompt.md  config-migration.md  legacy-audit.md  metrics-schema.md  phase5-metrics.md  phase6-sinks.md  phase7-docs.md  plugin-architecture.md  prompt-engine.md  schema-validation-plan.md  stats-analytics-inventory.md  stats-refactor-plan.md
old/: experiment_runner.py.historical  experiment_runner_requirements.md  experiment_stats.py  experiment_stats_requirements.md  main.py.historical  main_requirements.md  master_requirements.md
orchestration_packs/: README.md
outputs/: latest_results.csv
scripts/: audit_docs.py  bootstrap.sh  check_contracts.py  check_coverage_thresholds.py  check_docker_pinning.sh  check_workflow_pip_pinning.sh  codex_audit_common.py  codex_bug_hunt.py  codex_exemption_validator.py  codex_integration_seam_hunt.py  codex_test_defect_hunt.py  container_healthcheck.py  daily-verification.sh  deploy-vm.sh  generate_plugin_docs.py  generate_test_bugs.py  generate_test_data.py  modernize_types.py  plugin_scaffold.py  restart-web.sh  run_mutation_testing.py  smoke-test.sh  summarize_docs.py  update_grype_version.py  update_semgrep_pin.py  validate-digest.sh  validate_deployment.py  validate_templates.py  verify-no-legacy-code.sh  verify_locked_install.py
search/: search_index.json
sidecar/: .gitignore  Cargo.toml  Makefile  RUST_CI_SETUP_GUIDE.md  SECURITY.md  deny.toml
sidecar/config/: sidecar.toml  standalone.toml
sidecar/src/: config.rs  crypto.rs  frames.rs  grants.rs  lib.rs  main.rs  protocol.rs  server.rs
sidecar/tests/: canonical_test.rs  config_test.rs  crypto_test.rs  fd_cloexec_test.rs  frames_test.rs  grants_test.rs  handlers_test.rs  protocol_test.rs  session_key_test.rs
site-docs/: DOCUMENTATION_HYGIENE.md  MKDOCSTRINGS_TROUBLESHOOTING.md  mkdocs.yml  requirements.txt
state/: unit_v2_coverage.json
tests/: __init__.py  adr002_test_helpers.py  conftest.py  test_adr002_baseplugin_compliance.py  test_adr002_error_handling.py  test_adr002_invariants.py  test_adr002_middleware_integration.py  test_adr002_properties.py  test_adr002_suite_integration.py  test_adr002_validation.py  test_adr002a_invariants.py  test_adr002a_performance.py  test_adr002b_config_enforcement.py  test_aggregators_cost_summary.py  test_aggregators_score_stats.py  test_analytics_report_errors.py  test_artifact_pipeline.py  test_artifacts.py  test_auto_discovery.py  test_baseline_score_assumptions_coverage.py  test_baseline_score_delta_coverage.py  test_baseline_score_significance.py  test_baseplugin_frozen.py  test_blob_sink_errors.py  test_blob_store.py  test_central_registry.py  test_circular_import_production.py  test_cli.py  test_cli_artifact_publish.py  test_cli_artifact_publish_edges.py  test_cli_bundle_failure.py  test_cli_dry_run.py  test_cli_end_to_end.py  test_cli_integration.py  test_cli_job_config.py  test_cli_strict_exit.py  test_cli_suite.py  test_cli_validate_schemas.py  test_cli_yaml_json_edges.py  test_config.py  (+129 more)
tests_v2/: conftest.py
wiki/: mkdocs.yml
(+5955 files in other folders)
