[project]
name = "elspeth"
version = "0.1.0"
description = "Auditable Sense/Decide/Act pipelines for high-reliability systems"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "John" }]
keywords = ["elspeth", "audit", "pipeline", "sda", "traceability", "data-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # CLI and TUI
    "typer>=0.21,<1",  # Stable CLI framework
    "textual>=7.2,<8",  # TUI framework with breaking changes in major versions

    # Configuration
    "dynaconf>=3.2,<4",  # Configuration management
    "pydantic>=2.12,<3",  # Data validation with v2 API
    "python-dotenv>=1.2,<2",  # .env file loading
    "pyyaml>=6.0,<7",  # YAML parsing

    # Plugin system
    "pluggy>=1.6,<2",  # Plugin architecture (pytest uses this)

    # Data handling
    "pandas>=2.2,<3",  # DataFrame operations

    # HTTP client
    "httpx>=0.27,<1",  # Async HTTP client

    # Database
    "sqlalchemy>=2.0,<3",  # SQL toolkit and ORM
    "alembic>=1.18,<2",  # Database migrations

    # Retries
    "tenacity>=9.0,<10",  # Retry logic with backoff

    # === Acceleration Stack ===
    # Canonical JSON (RFC 8785/JCS)
    "rfc8785>=0.1.4,<0.2",  # Deterministic JSON serialization

    # DAG validation
    "networkx>=3.6,<4",  # Graph algorithms

    # Observability
    "opentelemetry-api>=1.39,<2",  # OpenTelemetry tracing API
    "opentelemetry-sdk>=1.39,<2",  # OpenTelemetry SDK
    "opentelemetry-exporter-otlp>=1.39,<2",  # OTLP exporter

    # Structured logging
    "structlog>=25.0,<26",  # Structured logging

    # Rate limiting
    "pyrate-limiter>=3.9,<4",  # Rate limiting (requires max_delay parameter)

    # Diffing (for verify mode)
    "deepdiff>=8.6,<9",  # Deep comparison for data structures
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",  # Testing framework
    "pytest-cov>=4.1,<6",  # Coverage plugin
    "pytest-asyncio>=1.0,<2",  # Async test support
    "pytest-dotenv>=0.5,<1",  # Load .env for integration tests
    "hypothesis>=6.98,<7",  # Property-based testing
    "mypy>=1.19,<2",  # Static type checking
    "ruff>=0.14,<1",  # Linting and formatting
    "pre-commit>=3.6,<4",  # Git hooks
    # Type stubs
    "pandas-stubs>=2.2,<3",  # Pandas type hints
    "types-networkx>=3.2,<4",  # NetworkX type hints
    "types-PyYAML>=6.0,<7",  # PyYAML type hints
    # Mutation testing (Phase 3)
    "mutmut>=2.4,<3",  # Mutation testing
]

llm = [
    # Phase 6: LLM plugin pack
    "jinja2>=3.1,<4",  # Template engine for prompts
    "httpx>=0.27,<1",  # HTTP client (inherited from main deps)
    "openai>=2.15,<3",  # OpenAI SDK
    "litellm>=1.81,<2",  # Multi-provider LLM interface
]

azure = [
    # Phase 7: Azure plugin pack
    "azure-storage-blob>=12.28,<13",  # Azure Blob Storage
    "azure-identity>=1.25,<2",  # Azure authentication
    "azure-keyvault-secrets>=4.10,<5",  # Key Vault for fingerprint key
    "jinja2>=3.1,<4",  # Template engine for path templating
]

all = [
    "elspeth[dev,llm,azure]",
]

[project.scripts]
elspeth = "elspeth.cli:app"
check-contracts = "scripts.check_contracts:main"

[project.urls]
Homepage = "https://github.com/your-org/elspeth"
Documentation = "https://github.com/your-org/elspeth#readme"
Repository = "https://github.com/your-org/elspeth"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elspeth"]

# === Ruff Configuration ===
[tool.ruff]
target-version = "py312"
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (important for audit timestamps!)
    "T20",    # flake8-print (no stray prints in production)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator - prefer explicit if/else for readability with comments
]

[tool.ruff.lint.isort]
known-first-party = ["elspeth"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T20"]  # Allow print in tests
"scripts/**/*.py" = ["T20"]  # Allow print in CLI scripts
"alembic/**/*.py" = ["E402"]  # Alembic env.py has imports after config setup
"vulture_whitelist.py" = ["B018", "F821"]  # Vulture whitelist uses bare names
# Package __init__ files use categorical __all__ grouping for readability
"src/elspeth/contracts/__init__.py" = ["RUF022"]
"src/elspeth/plugins/__init__.py" = ["RUF022"]

# === Mypy Configuration ===
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
plugins = ["pydantic.mypy"]
# Allow unused ignores - needed for pre-commit which runs in isolated env
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "dynaconf.*",
    "pluggy.*",
    "rfc8785.*",
    "pyrate_limiter.*",
    "deepdiff.*",
    "textual.*",
    "opentelemetry.*",
    "hypothesis.*",
    "azure.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# Test files use hypothesis decorators that don't have type stubs
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "elspeth.tui.*"
# TUI uses textual which has incomplete type stubs
# App[None] inheritance triggers "Class cannot subclass value of type Any"
disallow_subclassing_any = false

# === Pytest Configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "asyncio: marks tests as async (handled by pytest-asyncio)",
]
# Load .env file for integration tests (API keys)
env_files = [".env"]

# === Coverage Configuration ===
[tool.coverage.run]
source = ["src/elspeth"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# === Mutation Testing Configuration (mutmut 2.x) ===
[tool.mutmut]
# Paths to mutate - audit-critical code that MUST have effective tests
# Target mutation scores:
#   - canonical.py: 95%+ (hash integrity is critical)
#   - landscape/: 90%+ (audit trail must be bulletproof)
#   - engine/: 85%+ (orchestration must be reliable)
paths_to_mutate = [
    # Core audit infrastructure
    "src/elspeth/core/canonical.py",
    "src/elspeth/core/payload_store.py",
    "src/elspeth/core/landscape/",
    "src/elspeth/core/checkpoint/",
    # Engine - row processing and orchestration
    "src/elspeth/engine/orchestrator.py",
    "src/elspeth/engine/processor.py",
    "src/elspeth/engine/executors.py",
    "src/elspeth/engine/coalesce_executor.py",
    "src/elspeth/engine/tokens.py",
]
# Test runner - include engine tests, use short traceback for debugging
runner = "python -m pytest tests/core/ tests/engine/ tests/property/ --tb=short"
# Tests directory
tests_dir = "tests/"
# Disable backup files - we use git
backup = false
